--- a/music/001-Why.md
+++ b/music/001-Why.md
@@ -25,9 +25,13 @@ So the natural solution is to self-host a streaming service?
     Web interface
     Multi-room sync
 
-What do I want?
+### What do I want?
 I want great tracking of what it is I listen to - I like analyzing listening statistics
 I want to be able to switch songs at a moments' notice, through a relatively clean UI
 It would be nice to have some sort of smart shuffle, but I don't know how feasible this is
 Also searching for songs, but same as before, not sure about feasibility
 Most important is offline playback on my iPhone
+
+### What can I do?
+Well, I have my own personal server, along with several unused laptops I can set up as microservers.
+I could host any of these services on any of these laptops.
